--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~13.1.3",
     "@angular/platform-browser-dynamic": "~13.1.3",
     "@angular/router": "~13.1.3",
+    "angular-in-memory-web-api": "^0.13.0",
     "bootstrap": "^5.1.3",
     "font-awesome": "^4.7.0",
     "rxjs": "~6.6.0",
